[package]
name = "lottery_smart_contract1"
version = "0.1.0"
authors = ["Me"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
thiserror = { version = "1.0.31" }
cosmwasm-schema = { version = "1.1.0", optional = true }
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10", features = [
    "stargate",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = "0.8.11"
secret-toolkit = { version = "0.10.0", default-features = false, features = [
    "utils",
    "storage",
    "serialization",
    "viewing-key",
    "permit",
] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
sha3 = "0.10.4"
base64 = "0.21.0"
secret-toolkit-serialization = { version = "0.10.0", features = ["base64"] }
anybuf = { version = "0.5.0" }
tnls = { git = "https://github.com/SecretSaturn/TNLS", branch = "main", package = "secret_gateway", default-features = false }

[[bin]]
name = "schema"
required-features = ["schema"]
